<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.1</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>org.jewel.knight</groupId>
  <artifactId>aquamarine</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>aquamarine</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>


    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-autoconfigure</artifactId>
    </dependency>


    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>21.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>21.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-web</artifactId>
      <version>21.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-media</artifactId>
      <version>21.0.1</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>org.controlsfx</groupId>-->
<!--      <artifactId>controlsfx</artifactId>-->
<!--      <version>11.1.2</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>com.dlsc.formsfx</groupId>-->
<!--      <artifactId>formsfx-core</artifactId>-->
<!--      <version>11.6.0</version>-->
<!--      <exclusions>-->
<!--        <exclusion>-->
<!--          <groupId>org.openjfx</groupId>-->
<!--          <artifactId>*</artifactId>-->
<!--        </exclusion>-->
<!--      </exclusions>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>net.synedra</groupId>-->
<!--      <artifactId>validatorfx</artifactId>-->
<!--      <version>0.4.0</version>-->
<!--      <exclusions>-->
<!--        <exclusion>-->
<!--          <groupId>org.openjfx</groupId>-->
<!--          <artifactId>*</artifactId>-->
<!--        </exclusion>-->
<!--      </exclusions>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.kordamp.ikonli</groupId>-->
<!--      <artifactId>ikonli-javafx</artifactId>-->
<!--      <version>12.3.1</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.kordamp.bootstrapfx</groupId>-->
<!--      <artifactId>bootstrapfx-core</artifactId>-->
<!--      <version>0.4.0</version>-->
<!--    </dependency>-->

<!--    <dependency>-->
<!--      <groupId>com.github.almasb</groupId>-->
<!--      <artifactId>fxgl</artifactId>-->
<!--      <version>21</version>-->
<!--      <exclusions>-->
<!--        <exclusion>-->
<!--          <groupId>org.openjfx</groupId>-->
<!--          <artifactId>*</artifactId>-->
<!--        </exclusion>-->
<!--      </exclusions>-->
<!--    </dependency>-->


    <dependency>
      <groupId>com.vladsch.flexmark</groupId>
      <artifactId>flexmark-all</artifactId>
      <version>0.64.8</version>
    </dependency>

    <dependency>
      <groupId>org.fxmisc.richtext</groupId>
      <artifactId>richtextfx</artifactId>
      <version>0.11.1</version>
    </dependency>


    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>


    <dependency>
      <groupId>javax.annotation</groupId>
      <artifactId>javax.annotation-api</artifactId>
      <version>1.3.2</version>
    </dependency>

    <dependency>
      <groupId>org.greenrobot</groupId>
      <artifactId>eventbus-java</artifactId>
      <version>3.3.1</version>
    </dependency>

    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.11.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.tika</groupId>
      <artifactId>tika-core</artifactId>
      <version>2.5.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>1.11.0</version>
    </dependency>



    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>kernel</artifactId>
      <version>7.1.14</version>
    </dependency>
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>html2pdf</artifactId>
      <version>3.0.3</version>
    </dependency>


    <dependency>
      <groupId>org.springframework.ai</groupId>
      <artifactId>spring-ai-azure-openai-spring-boot-starter</artifactId>
      <version>0.8.0-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.languagetool</groupId>
      <artifactId>language-en</artifactId>
      <version>6.3</version>
    </dependency>

    <dependency>
      <groupId>org.languagetool</groupId>
      <artifactId>language-zh</artifactId>
      <version>6.3</version>
    </dependency>

<!--    <dependency>-->
<!--      <groupId>org.languagetool</groupId>-->
<!--      <artifactId>core-en</artifactId>-->
<!--      <version>6.3</version>-->
<!--    </dependency>-->

  </dependencies>

  <repositories>
    <repository>
      <id>spring-snapshots</id>
      <name>Spring Snapshots</name>
      <url>https://repo.spring.io/snapshot</url>
      <releases>
        <enabled>false</enabled>
      </releases>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <executions>
          <execution>
            <!-- Default configuration for running with: mvn clean javafx:run -->
            <id>default-cli</id>
            <configuration>
              <mainClass>org.jewel.knight.aquamarine.AquamarineApplication</mainClass>
              <launcher>app</launcher>
              <jlinkZipName>app</jlinkZipName>
              <jlinkImageName>app</jlinkImageName>
              <noManPages>true</noManPages>
              <stripDebug>true</stripDebug>
              <noHeaderFiles>true</noHeaderFiles>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>